# BackTestBench

./: .gitignore  BKP_CMakeLists.txt.bkp  CMakeLists.txt  config.ini
src/: main.cpp
src/db/: mongoManager.cpp  mongoManager.h
src/dtos/: kline.h
src/indicator/: ta.cu  ta.cuh
src/platform/: platform.cpp  platform.h
src/settlement/: settlement.cpp  settlement.h
src/strategy/: baseStrategy.h  myStrategy.cpp  myStrategy.cu  myStrategy.h
src/strategy/superTrendStrategy/: CMakeLists.txt
src/strategy/superTrendStrategy/include/: myStrategy.h
src/strategy/superTrendStrategy/src/: myStrategy.cpp  myStrategy.cu
src/threadPool/: threadPool.cpp  threadPool.h
